Finished static layout for homepage. Closes #1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,7 @@
         <item>Help</item>
 
     </string-array>
+    <string name="change_my_store">Change My Store</string>
+    <string name="my_orders">My Orders</string>
 
 </resources>
